# viralanalyzer-cli

./: .gitignore  LICENSE  README.md  SECURITY.md  claude_desktop_config.json  pyproject.toml
src/viral_cli/: __init__.py  __main__.py  app.py  client.py  config.py  constants.py  errors.py  mcp_proxy.py  output.py
src/viral_cli/commands/: __init__.py  ai_settings.py  analyze.py  auth.py  billing.py  content.py  dashboard.py  engage.py  ideas.py  mcp.py  pipelines.py  profiles.py  trends.py
src/viral_cli/tui/: __init__.py  dashboard.py
tests/: conftest.py  test_client.py  test_commands.py  test_config.py
