[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "viralanalyzer-cli"
version = "0.1.0"
description = "Competitive intelligence from your terminal — 25+ platforms, AI analysis, MCP server"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "ViralAnalyzer", email = "dev@viralanalyzer.com.br"}]
readme = "README.md"
keywords = [
    "cli", "competitive-intelligence", "viral-content", "social-media",
    "tiktok", "instagram", "youtube", "mcp", "ai", "analytics",
    "marketing", "scraping", "apify", "trends", "dashboard",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]

dependencies = [
    "typer[all]>=0.12.0",
    "httpx>=0.27.0",
    "pydantic>=2.5.0",
    "rich>=13.7.0",
    "textual>=0.70.0",
]

[project.urls]
Homepage = "https://viralanalyzer.com.br"
Documentation = "https://github.com/Pauloeduspbr/viralanalyzer-cli"
Repository = "https://github.com/Pauloeduspbr/viralanalyzer-cli"
"Bug Tracker" = "https://github.com/Pauloeduspbr/viralanalyzer-cli/issues"
"Apify Store" = "https://apify.com/viralanalyzer"

[project.optional-dependencies]
web = [
    "textual-serve>=1.1.0",
]
mcp = [
    "mcp>=1.0.0",
]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
    "coverage>=7.4",
    "textual-serve>=1.1.0",
    "mcp>=1.0.0",
]

[project.scripts]
viral = "viral_cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
